RESOLVED FIXED198329
Scrolling node ordering wrong when a layer has both positioning and fixed/sticky node
https://bugs.webkit.org/show_bug.cgi?id=198329
Summary Scrolling node ordering wrong when a layer has both positioning and fixed/sti...
Antti Koivisto
Reported 2019-05-29 07:05:53 PDT
With sticky positioning in non-stacking context overflow you currently get structure like FrameScrollingNode OverflowScrollingNode StickyNode PositionedNode where StickyNode and PositionedNode reference the same layer. Sticky doesn't get applied at all when the overflow moves.
Attachments
patch (9.32 KB, patch)
2019-05-29 08:15 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-05-29 08:15:04 PDT
WebKit Commit Bot
Comment 2 2019-05-29 10:41:34 PDT
Comment on attachment 370850 [details] patch Clearing flags on attachment: 370850 Committed r245854: <https://trac.webkit.org/changeset/245854>
WebKit Commit Bot
Comment 3 2019-05-29 10:41:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-05-29 10:42:19 PDT
Note You need to log in before you can comment on or make changes to this bug.