Scrolling node ordering wrong when a layer has both positioning and fixed/sticky node https://bugs.webkit.org/show_bug.cgi?id=198329

Reviewed by Darin Adler.

Source/WebCore:

Test: scrollingcoordinator/scrolling-tree/sticky-in-overflow.html

With sticky positioning in non-stacking context overflow you currently get structure like

FrameScrollingNode
  OverflowScrollingNode
  StickyNode
    PositionedNode

where StickyNode and PositionedNode reference the same layer. Sticky doesn't get applied at all when the overflow moves.

This patch reverses the order of sticky and positioned. It doesn't fix sticky positioning during scrolling yet,
but it does make it less jumpy. It is a prerequisite for the full fix.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateScrollCoordinationForLayer):

LayoutTests:

* platform/ios-wk2/scrollingcoordinator/scrolling-tree/sticky-in-overflow-expected.txt: Added.
* scrollingcoordinator/scrolling-tree/sticky-in-overflow-expected.txt: Added.
* scrollingcoordinator/scrolling-tree/sticky-in-overflow.html: Added.


Canonical link: https://commits.webkit.org/212364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245854 268f45cc-cd09-0410-ab3c-d52691b4dbfc